<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayapp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtUsuario1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="Usuário"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtAcessesuaconta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtUsuario1"
        android:fontFamily="@font/poppinsregular"
        android:gravity="center"
        android:text="Acesse sua conta"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:fontFamily="@font/manjaribold"
            android:padding="5dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/UserLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:autofillHints="name"
            android:background="@drawable/border"
            android:elevation="1dp"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/email_email_com"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:padding="18dp" />

        <TextView
            android:id="@+id/txtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/manjaribold"
            android:padding="5dp"
            android:text="@string/senha"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:autofillHints="password"
            android:background="@drawable/border"
            android:elevation="1dp"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/_12345"
            android:inputType="textPassword"
            android:padding="18dp" />

        <Button
            android:id="@+id/btnPedir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/btnborder"
            android:fontFamily="@font/poppinssemibold"
            android:padding="10dp"
            android:text="Logar!"
            android:textAllCaps="false"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ainda_n_o_tenho_uma_conta"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:selectAllOnFocus="true"
            />

    </LinearLayout>

</RelativeLayout>